# lunardb

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
cmake-tools/macros/: add_lunar_common_library.cmake  add_lunar_executable.cmake  add_lunar_library.cmake  add_lunar_unit_test.cmake
cmake-tools/macros/private/: add_lunar_library_helper.cmake
cmake-tools/setup/: boost.cmake  ccache.cmake  nlohmann.cmake  openssl.cmake  simdjson.cmake  testing.cmake
cmake-tools/setup/private/: testing_modules.cmake
cmake-utils/: add_lunar_unit_test.cmake
docs/: Architecture.puml  Architecture.yml
docs/Astral/: Architecture.puml  Architecture.yml
docs/BrightMoon/: Architecture.puml  Architecture.yml
docs/BrightMoon/Recovery/: Recovery_EN.puml  Recovery_RO.puml
docs/Celestial/: Architecture.puml  Architecture.yml
docs/Crescentum/: Acrhitecture.puml  Architecture.yml
docs/Moonlight/: Architecture.puml  Architecture.yml
docs/Moonlight/Primitives/: BinaryOperator.puml  DatabaseOperationType.puml  QueryType.puml  RenameType.puml  StructureType.puml
docs/Moonlight/QueryData/: Commit.puml  Database.puml  Delete.puml  Drop.puml  Insert.puml  Migrate.puml  Revoke.puml  Rollback.puml  SavePoint.puml  Truncate.puml  Update.puml
docs/Selenity/: Architecture.puml  Architecture.yml
docs/moonlight/: Architecture.yml
docs/moonlight/Primitives/: BooleanOperator.puml  DatabaseOperationType.puml  OrderType.puml  QueryType.puml  UserPermissionType.puml
docs/moonlight/QueryData/: Commit.puml  Create.puml  Database.puml  Delete.puml  Grant.puml  Index.puml  Rebind.puml  Rename.puml  Rollback.puml  Schema.puml  Select.puml  User.puml  WhereClause.puml
misc/: prototype.sh  scenario.sql  scenario01.sql  scenario03.sql  scenario04.sql
misc/dev/: testing1.sql  testing5.sql  testing6.sql  testing8.sql
misc/scenarios/dev/: drop_document.sql  drop_document_cascade.sql  drop_table.sql  (+15 more)
scripts/: run_cli.sh  showcase_console_colors.sh
scripts/debug/: cli.sh  server.sh
scripts/release/: cli.sh  server.sh
src/: CMakeLists.txt  driver.cpp
src/Astral/: CMakeLists.txt
src/BrightMoon/: CMakeLists.txt
src/Celestial/: CMakeLists.txt
src/Common/: CMakeLists.txt
src/Crescentum/: CMakeLists.txt
src/LunarDB/: CMakeLists.txt
src/Moonlight/: CMakeLists.txt
src/Moonlight/src/: CMakeLists.txt  Errors.cpp  Errors.hpp  HierarchySet.hpp  IQueryParsers.hpp  ParsedQuery.cpp  Primitives.cpp  QueryExtractor.cpp  QueryExtractor.hpp  QueryParser.cpp  QueryParsers.hpp  Utils.cpp  Utils.hpp
src/Moonlight/src/Common/: Errors.hpp  LiteralToStringMap.hpp  QueryExtractor.hpp  QueryParsers.hpp  Utils.hpp
src/Moonlight/src/Parsers/: AuthParser.cpp  CommitParser.cpp  CreateParser.cpp  DatabaseParser.cpp  DeleteParser.cpp  DropParser.cpp  GrantParser.cpp  IndexParser.cpp  InsertParser.cpp  LockParser.cpp  MigrateParser.cpp  QueryParser.hpp  RebindParser.cpp  RenameParser.cpp  RevokeParser.cpp  RollbackParser.cpp  SavePointParser.cpp  SchemaParser.cpp  SelectParser.cpp  TruncateParser.cpp  UpdateParser.cpp  UserParser.cpp  ViewParser.cpp
src/Moonlight/src/QueryDataHelpers/: Equality.cpp  Init.cpp  Ostream.cpp
src/Moonlight/test/: CMakeLists.txt  CommitParserTest.cpp  CreateParserTest.cpp  DatabaseParserTest.cpp  DeleteParserTest.cpp  IndexParserTest.cpp  LockParserTest.cpp  ParsedQueryTest.cpp  PrimitivesTest.cpp  QueryExtractorTest.cpp  RenameParserTest.cpp  RevokeParserTest.cpp  TruncateParserTest.cpp  UpdateParserTest.cpp  UtilsTest.cpp  UtilsWhereClauseTest.cpp  ViewParserTest.cpp  setup_unit_tests.cmake
src/Moonlight/test/Parsers/: AuthParserTest.cpp  CommitParserTest.cpp  CreateParserTest.cpp  DatabaseParserTest.cpp  DeleteParserTest.cpp  DropParserTest.cpp  GrantParserTest.cpp  IndexParserTest.cpp  InsertParserTest.cpp  LockParserTest.cpp  MigrateParserTest.cpp  QueryParserTest.hpp  RebindParserTest.cpp  RenameParserTest.cpp  RevokeParserTest.cpp  RollbackParserTest.cpp  SavePointParserTest.cpp  SchemaParserTest.cpp  SelectParserTest.cpp  TruncateParserTest.cpp  UpdateParserTest.cpp  UserParserTest.cpp  ViewParserTest.cpp
src/Moonlight/test/Parsers/Common/: Expectations.hpp  ParserTestIncludes.hpp
src/Moonlight/test/Parsers/Helpers/: QueryDataEquality.hpp  QueryDataHelpers.hpp  QueryDataInit.hpp  QueryDataOstream.hpp
src/Moonlight/test/Parsers/QueryDataHelpers/: Equality.hpp  Helpers.hpp  Init.hpp  Ostream.hpp
src/Selenity/: CMakeLists.txt
src/Selenity/include/: CatalogEntry.hpp  DatabaseManager.hpp  SchemasCatalog.hpp  SystemCatalog.hpp
src/Selenity/include/Collections/: BaseManager.hpp  Configuration.hpp  DocumentManager.hpp  TableManager.hpp
src/Selenity/include/Managers/: CatalogManager.hpp  Configurations.hpp  DatabaseManager.hpp
src/Selenity/include/Managers/Collections/: AbstractManager.hpp  DocumentManager.hpp  EvaluateWhereClause.hpp  TableManager.hpp
src/Selenity/include/Managers/private/: CatalogManager.inl
src/Selenity/include/helpers/: Operators.hpp
src/Selenity/include/private/: DatabaseCatalog.hpp
src/Selenity/include/private/SystemCatalog/: DatabaseCatalog.hpp  DatabaseConfig.hpp
src/Selenity/include/private/SystemCatalog/helpers/: Operators.hpp  Ostream.hpp
src/Selenity/include/private/helpers/: Operators.hpp
src/Selenity/src/: DatabaseCatalog.cpp  DatabaseManager.cpp  SchemasCatalog.cpp  SystemCatalog.cpp  main.cpp
src/Selenity/src/Collections/: BaseManager.cpp
src/Selenity/src/Managers/: Configurations.cpp  DatabaseManager.cpp
src/Selenity/src/Managers/Collections/: AbstractManager.cpp  Common.cpp  Common.hpp  DocumentManager.cpp  EvaluateWhereClause.cpp  TableManager.cpp
src/Selenity/src/Managers/Collections/private/: Common.inl
src/Selenity/src/SystemCatalog/: DatabaseConfig.cpp  SystemCatalog.cpp
src/Selenity/test/: DatabaseCatalogTest.cpp  DatabaseManagerTest.cpp  DummyTest.cpp  SchemasCatalogTest.cpp  SystemCatalogTest.cpp  setup_unit_tests.cmake
src/Selenity/test/SystemCatalog/: DatabaseCatalogTest.cpp  DatabaseConfigTest.cpp  SystemCatalogTest.cpp
(+234 files in other folders)
